// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileDisplay Rendering Render FileDisplay with all props 1`] = `
<div
  className="FileDisplay test-class-A test-class-B FileDisplay--withDelete FileDisplay--withDownload"
>
  <IconButton
    className="FileDisplay__download"
    icon={[Function]}
    id="test-id-for-file-display-download"
    onClick={[Function]}
    tooltipPlacement="top"
    tooltipText="test-tooltip-for-download-button"
  />
  <div
    className="FileDisplay__fileName"
  >
    test-file-name
  </div>
  <IconButton
    className="FileDisplay__delete"
    disabled={true}
    icon={[Function]}
    id="test-id-for-file-display-delete"
    onClick={[Function]}
    tooltipPlacement="top"
    tooltipText="test-tooltip-for-delete-button"
  />
</div>
`;

exports[`FileDisplay Rendering Render FileDisplay with default props 1`] = `
<div
  className="FileDisplay"
>
  <div
    className="FileDisplay__fileName"
  />
</div>
`;

exports[`FileDisplay Rendering Render FileDisplay with props, but without onDelete 1`] = `
<div
  className="FileDisplay test-class-A test-class-B"
>
  <div
    className="FileDisplay__fileName"
  >
    test-file-name
  </div>
</div>
`;

exports[`FileDisplay Rendering Render FileDisplay with props, including onDelete and tooltip 1`] = `
<div
  className="FileDisplay test-class-A test-class-B FileDisplay--withDelete"
>
  <div
    className="FileDisplay__fileName"
  >
    test-file-name
  </div>
  <IconButton
    className="FileDisplay__delete"
    disabled={true}
    icon={[Function]}
    id="test-id-for-file-display-delete"
    onClick={[Function]}
    tooltipPlacement="top"
    tooltipText="test-tooltip-for-delete-button"
  />
</div>
`;

exports[`FileDisplay Rendering Render FileDisplay with props, including onDelete, but no tooltip 1`] = `
<div
  className="FileDisplay test-class-A test-class-B FileDisplay--withDelete"
>
  <div
    className="FileDisplay__fileName"
  >
    test-file-name
  </div>
  <IconButton
    className="FileDisplay__delete"
    disabled={false}
    icon={[Function]}
    id="test-id-for-file-display-delete"
    onClick={[Function]}
    tooltipPlacement="top"
  />
</div>
`;

exports[`FileDisplay Rendering Render FileDisplay with props, including onDownload and no tooltip 1`] = `
<div
  className="FileDisplay test-class-A test-class-B FileDisplay--withDownload"
>
  <IconButton
    className="FileDisplay__download"
    icon={[Function]}
    id="test-id-for-file-display-download"
    onClick={[Function]}
    tooltipPlacement="top"
  />
  <div
    className="FileDisplay__fileName"
  >
    test-file-name
  </div>
</div>
`;

exports[`FileDisplay Rendering Render FileDisplay with props, including onDownload and tooltip 1`] = `
<div
  className="FileDisplay test-class-A test-class-B FileDisplay--withDownload"
>
  <IconButton
    className="FileDisplay__download"
    icon={[Function]}
    id="test-id-for-file-display-download"
    onClick={[Function]}
    tooltipPlacement="top"
    tooltipText="test-tooltip-for-download-button"
  />
  <div
    className="FileDisplay__fileName"
  >
    test-file-name
  </div>
</div>
`;
